added more section

--- a/assets/css/layout/_preview-section.scss
+++ b/assets/css/layout/_preview-section.scss
@@ -1,68 +1,7 @@
-.preview-section {
-  .preview-div {
-    position: relative;
-    .preview {
-      border-radius: 30px;
-      @include sm{
-        border-radius: 10px;
-      }
-    }
-    .preview-content {
-      background-color: $white;
-      width: 400px;
-      padding: 30px;
-      border-radius: 45px;
-      box-shadow: 10px 50px 59px rgba(0, 0, 0, 0.1);
-      position: absolute;
-      right: -30px;
-      bottom: -20px;padding: 20px;
-      @include lg {
-        right: 0;
-      }
-      @include md {
-        right: 0;
-        width: auto;
-      }
-      @include sm {
-        right: 0;
-        width: auto;
-      }
-      p {
-        font-size: 20px;
-        color: $navyColor;
-        font-weight: 800;
-        margin: 0px;
-        @include sm{
-          font-size: 18px;
-        }
-        span {
-          font-style: italic;
-          font-size: 28px;
-          color: $primaryColor;
-          @include sm{
-            font-size: 24px;
-          }
-        }
-        font-style: 400;
-        &.big {
-          font-size: 50px;
-          color: $primaryColor;
-          font-style: italic;
-          @include md {
-            font-size: 40px;
-          }
-          @include sm {
-            font-size: 30px;
-          }
-        }
-      }
-      @include sm {
-        position: relative;
-        right: 0px;
-        bottom: 0px;
-      }
-    }
-  }
+
+.preview-div {
+  position: relative;
+  
   .disclaimer-text {
     p {
       font-style: italic;
@@ -74,11 +13,71 @@
       }
     }
   }
+  .preview {
+    border-radius: 30px;
+    @include sm{
+      border-radius: 10px;
+    }
+  }
+  .preview-content {
+    background-color: $white;
+    min-width: 300px;
+    padding: 30px;
+    border-radius: 45px;
+    box-shadow: 10px 50px 59px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    right: -30px;
+    bottom: -20px;padding: 20px;
+    @include lg {
+      right: 0;
+    }
+    @include md {
+      right: 0;
+      width: auto;
+    }
+    @include sm {
+      right: 0;
+      min-width: auto;
+    }
+    p {
+      font-size: 20px;
+      color: $navyColor;
+      font-weight: 800;
+      margin: 0px;
+      @include sm{
+        font-size: 18px;
+      }
+      span {
+        font-style: italic;
+        font-size: 28px;
+        color: $primaryColor;
+        @include sm{
+          font-size: 24px;
+        }
+      }
+      &.big {
+        font-size: 50px;
+        color: $primaryColor;
+        font-style: italic;
+        @include md {
+          font-size: 40px;
+        }
+        @include sm {
+          font-size: 30px;
+        }
+      }
+    }
+    @include sm {
+      position: relative;
+      right: 0px;
+      bottom: 0px;
+    }
+  }
 }
 
 .title-text {
   color: $navyColor;
-  font-size: 50px;
+  font-size: 45px;
   font-weight: 700;
   @include md {
     font-size: 35px;
@@ -87,7 +86,7 @@
     font-size: 24px;
   }
   .red {
-    font-size: 60px;
+    font-size: 55px;
     color: $primaryColor;
     font-weight: 900;
     @include md {
