--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,4 +11,6 @@
 @import './layout/preview-section';
 @import './layout/btc-section';
 @import './layout/black-section';
+@import './layout/services-section';
+@import './layout/bitcointalk-section';
 
