--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,4 +13,10 @@
 @import './layout/black-section';
 @import './layout/services-section';
 @import './layout/bitcointalk-section';
+@import './layout/wave-section';
+@import './layout/important-section';
+@import './layout/requirements-section';
+@import './layout/download-section';
+@import './layout/benefits-section';
+@import './layout/own-section';
 
