--- a/assets/css/layout/_monopoly-section.scss
+++ b/assets/css/layout/_monopoly-section.scss
@@ -29,13 +29,16 @@
   }
   h4 {
     &.blue {
-      font-weight: 700;
+      font-weight: 900;
       color: $secondaryColor;
       font-size: 28px;
       font-style: italic;
       @include sm {
         font-size: 24px;
       }
+    }
+    &.thin{
+      font-weight: 700;
     }
   }
   ul {
