--- a/assets/css/layout/_services-section.scss
+++ b/assets/css/layout/_services-section.scss
@@ -68,6 +68,11 @@
     font-family: $primaryFont;
     color: $navyColor;
     font-size: 24px;
+    .blue {
+      color: $blueColor;
+      font-weight: 900;
+      font-style: italic;
+    }
     &.blue {
       color: $blueColor;
       font-weight: 900;
@@ -87,6 +92,11 @@
     }
     @include sm{
       font-size: 16px;
+    }
+  }
+  &.blue{
+    p{
+      color: $secondaryColor;
     }
   }
 }
