--- a/assets/css/base/_variables.scss
+++ b/assets/css/base/_variables.scss
@@ -9,6 +9,7 @@ $secondaryColor: #0086CA;
 $blueColor: #1D44F9;
 $navyColor: #2D3561;
 $yellowColor: #FFE37B;
+$redColor: #CA0055;
 $grayColor: #2c3033;
 $grayColor2: #DBDFEF;
 $offwhiteColor : #F0F6F8;
