--- a/assets/css/layout/_black-section.scss
+++ b/assets/css/layout/_black-section.scss
@@ -37,4 +37,10 @@
       font-size: 24px;
     }
   }
+  .title-text {
+    .blue {
+      color: $secondaryColor;
+      font-style: normal;
+    }
+  }
 }
