--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,4 +19,9 @@
 @import './layout/download-section';
 @import './layout/benefits-section';
 @import './layout/own-section';
+@import './layout/futurevalue-section';
+@import './layout/exchange-section';
+@import './layout/quote-section';
+@import './layout/why-section';
+@import './layout/convinced-section';
 
