--- a/assets/css/layout/_monopoly-section.scss
+++ b/assets/css/layout/_monopoly-section.scss
@@ -81,4 +81,40 @@
       }
     }
   }
+  &.no-list{
+    h4{
+      &.navy{
+        font-size: 30px;
+        color: $navyColor;
+        @include md{
+          margin-top: 20px;
+        }
+        @include sm{
+          margin-top: 20px;
+        }
+        .blue{
+          color: $secondaryColor;
+        }
+        .real-red{
+          color: $redColor;
+        }
+        @include sm{
+          font-size: 20px;
+        }
+      }
+    }
+    ul{
+      li{
+        padding-left: 0px;
+        font-size: 20px;
+        &:before {
+          display: none;
+        }
+        
+        @include sm{
+          font-size: 16px;
+        }
+      }
+    }
+  }
 }
