--- a/assets/css/layout/_own-section.scss
+++ b/assets/css/layout/_own-section.scss
@@ -1,5 +1,5 @@
 .own-section{
-  background-image: url(../../img/own-bg.svg);
+  background-image: url(../img/own-bg.svg);
   background-size: cover;
   background-position: center center;
   position: relative;
