--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 @import './base/variables';
 @import './base/base';
 @import './layout/header';
+@import './layout/footer';
 @import './layout/intro-section';
 @import './layout/monopoly-section';
 @import './layout/roi-section';
@@ -24,4 +25,6 @@
 @import './layout/quote-section';
 @import './layout/why-section';
 @import './layout/convinced-section';
+@import './layout/join-section';
+@import './layout/question-section';
 
