--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,13 +61,14 @@ button:focus {
   padding: 10px 15px;
   border-radius: 5px;
   margin: 0px 8px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   -webkit-box-shadow: 0px 2px 10px #95e0f7;
           box-shadow: 0px 2px 10px #95e0f7;
 }
 
 .gradient-btn:hover {
+  opacity: 0.8;
   color: #ffffff;
 }
 
@@ -240,6 +241,8 @@ button:focus {
   color: #2c3033;
   font-size: 15px;
   text-align: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -457,6 +460,12 @@ button:focus {
   color: #ffffff;
   font-size: 14px;
   display: block;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.footer .footer-link ul li a:hover {
+  color: #0086CA;
 }
 
 .footer .footer-brands {
