--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -34,6 +34,10 @@
           color: $white;
           font-size: 14px;
           display: block;
+          transition: all 0.3s ease;
+          &:hover{
+            color: $secondaryColor;
+          }
         }
       }
     }
